--- a/Frontend/pages/Admin/articles.html
+++ b/Frontend/pages/Admin/articles.html
@@ -13,109 +13,28 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
-    <style>
-      body {
-        background-color: #1a1a1a;
-        font-family: Arial, sans-serif;
-        overflow-x: hidden;
-        position: relative;
-        color: #e0e0e0;
-      }
-      .navbar {
-        background-color: #1c1c1c;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
-        position: relative;
-        z-index: 10;
-      }
-      .navbar-brand {
-        color: #f0f0f0 !important;
-      }
-      .table-container {
-        background-color: rgba(36, 36, 36, 0.8);
-        backdrop-filter: blur(5px);
-        border-radius: 10px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        border: 1px solid rgba(255, 255, 255, 0.1);
-      }
-      .table {
-        color: #e0e0e0;
-      }
-      .table-hover tbody tr:hover {
-        background-color: rgba(255, 255, 255, 0.05);
-      }
-      .table thead th {
-        border-bottom: 2px solid rgba(255, 255, 255, 0.1);
-        color: #373737;
-      }
-
-      .modal-content {
-        background-color: #242424;
-        color: #e0e0e0;
-        border: 1px solid rgba(255, 255, 255, 0.1);
-      }
-      .modal-header {
-        border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-      }
-      .modal-footer {
-        border-top: 1px solid rgba(255, 255, 255, 0.1);
-      }
-      .form-control {
-        background-color: #333;
-        color: #f0f0f0;
-        border: 1px solid #555;
-      }
-      .form-control:focus {
-        background-color: #333;
-        color: #f0f0f0;
-        border-color: #0d6efd;
-        box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
-      }
-      .btn-outline-info {
-        color: #0d6efd;
-        border-color: #0d6efd;
-      }
-      .btn-outline-info:hover {
-        background-color: #0d6efd;
-        color: #fff;
-      }
-
-      /* Particle Network Background */
-      #p5-canvas {
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: -1;
-      }
-
-      /* Main content z-index */
-      .container,
-      .navbar {
-        position: relative;
-        z-index: 1;
-      }
-    </style>
+    <link rel="stylesheet" href="/Frontend/css/Admin/articles.css" />
   </head>
 
   <body>
-    <canvas id="p5-canvas"></canvas>
-
-    <nav class="navbar navbar-expand-lg navbar-light mb-4">
-      <div class="container-fluid">
-        <a
-          class="navbar-brand fw-bold text-primary"
-          href="./admin-dashboard.html"
-        >
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg mb-4">
+      <div
+        class="container-fluid d-flex justify-content-between align-items-center"
+      >
+        <a class="navbar-brand fw-bold" href="./admin-dashboard.html">
           <i class="fas fa-arrow-left me-2"></i>Back to Dashboard
         </a>
-        <h2 class="h5 mb-0" style="color: #e0e0e0">Manage Articles</h2>
+        <h2 class="h5 mb-0">Manage Articles</h2>
         <button id="logoutBtn" class="btn btn-outline-danger">
           <i class="fas fa-sign-out-alt me-2"></i>Logout
         </button>
       </div>
     </nav>
 
+    <!-- Table -->
     <div class="container">
-      <div class="table-responsive table-container p-4">
+      <div class="table-responsive table-container">
         <table class="table table-hover align-middle">
           <thead>
             <tr>
@@ -134,6 +53,7 @@
       </div>
     </div>
 
+    <!-- Delete Modal -->
     <div
       class="modal fade"
       id="deleteArticleModal"
@@ -145,24 +65,27 @@
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="deleteArticleModalLabel">
+              <i class="fas fa-exclamation-triangle text-danger me-2"></i>
               Delete Article
             </h5>
             <button
               type="button"
-              class="btn-close btn-close-white"
+              class="btn-close"
               data-bs-dismiss="modal"
               aria-label="Close"
             ></button>
           </div>
           <div class="modal-body">
-            <p>
+            <p class="mb-3">
               Are you sure you want to delete this article? Please provide a
               reason.
             </p>
             <form id="deleteArticleForm">
               <input type="hidden" id="articleIdToDelete" />
               <div class="mb-3">
-                <label for="deleteReason" class="form-label">Reason</label>
+                <label for="deleteReason" class="form-label fw-semibold"
+                  >Reason</label
+                >
                 <textarea
                   class="form-control"
                   id="deleteReason"
@@ -192,89 +115,9 @@
       </div>
     </div>
 
+    <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"></script>
     <script src="/Frontend/JavaScript/Admin/articles.js"></script>
-
-    <script>
-      let particles = [];
-      const numParticles = 100;
-      const connectionDistance = 150;
-
-      function setup() {
-        let canvas = createCanvas(windowWidth, windowHeight);
-        canvas.id("p5-canvas");
-        canvas.style("display", "block");
-        canvas.style("position", "fixed");
-        canvas.style("top", "0");
-        canvas.style("left", "0");
-        canvas.style("z-index", "-1");
-
-        for (let i = 0; i < numParticles; i++) {
-          particles.push(new Particle());
-        }
-      }
-
-      function draw() {
-        background("#1a1a1a");
-        for (let i = 0; i < particles.length; i++) {
-          particles[i].update();
-          particles[i].show();
-          for (let j = i + 1; j < particles.length; j++) {
-            let d = dist(
-              particles[i].x,
-              particles[i].y,
-              particles[j].x,
-              particles[j].y
-            );
-            if (d < connectionDistance) {
-              let alpha = map(d, 0, connectionDistance, 40, 0);
-              stroke(255, 255, 255, alpha);
-              strokeWeight(0.5);
-              line(
-                particles[i].x,
-                particles[i].y,
-                particles[j].x,
-                particles[j].y
-              );
-            }
-          }
-        }
-      }
-
-      class Particle {
-        constructor() {
-          this.x = random(width);
-          this.y = random(height);
-          this.vx = random(-0.5, 0.5);
-          this.vy = random(-0.5, 0.5);
-          this.r = random(1, 3);
-          this.color = 255;
-        }
-
-        update() {
-          this.x += this.vx;
-          this.y += this.vy;
-
-          if (this.x < 0 || this.x > width) {
-            this.vx *= -1;
-          }
-          if (this.y < 0 || this.y > height) {
-            this.vy *= -1;
-          }
-        }
-
-        show() {
-          noStroke();
-          fill(this.color);
-          ellipse(this.x, this.y, this.r * 2);
-        }
-      }
-
-      function windowResized() {
-        resizeCanvas(windowWidth, windowHeight);
-      }
-    </script>
   </body>
 </html>
