--- a/Frontend/pages/Admin/admin-dashboard.html
+++ b/Frontend/pages/Admin/admin-dashboard.html
@@ -178,7 +178,8 @@
             localStorage.removeItem("email");
 
             // Redirect to login page
-            window.location.href = "/Frontend/pages/login.html";
+            window.location.href =
+              "/Frontend/pages/login-and-register/login-and-register.html";
           });
         }
       });
