--- a/Frontend/pages/Admin/articles.html
+++ b/Frontend/pages/Admin/articles.html
@@ -26,9 +26,9 @@
           <i class="fas fa-arrow-left me-2"></i>Back to Dashboard
         </a>
         <h2 class="h5 mb-0">Manage Articles</h2>
-        <button id="logoutBtn" class="btn btn-outline-danger">
+        <!-- <button id="logoutBtn" class="btn btn-outline-danger">
           <i class="fas fa-sign-out-alt me-2"></i>Logout
-        </button>
+        </button> -->
       </div>
     </nav>
 
