--- a/Frontend/pages/Admin/users.html
+++ b/Frontend/pages/Admin/users.html
@@ -13,104 +13,25 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
-    <style>
-      body {
-        background-color: #1a1a1a; /* Dark background */
-        color: #e0e0e0; /* Light text color */
-        font-family: Arial, sans-serif;
-        overflow-x: hidden;
-        position: relative;
-      }
-      .navbar {
-        background-color: #1c1c1c; /* Dark navbar background */
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
-      }
-      .navbar-brand {
-        color: #f0f0f0 !important;
-      }
-      .h5,
-      h3 {
-        color: #f0f0f0 !important;
-      }
-      .table-container {
-        background-color: rgba(36, 36, 36, 0.8);
-        backdrop-filter: blur(5px);
-        border-radius: 10px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        border: 1px solid rgba(255, 255, 255, 0.1);
-      }
-      .table {
-        color: #e0e0e0;
-      }
-      .table-hover tbody tr:hover {
-        background-color: rgba(255, 255, 255, 0.05);
-      }
-      .table thead th {
-        border-bottom: 2px solid rgba(255, 255, 255, 0.1);
-        color: #373737;
-      }
-      .modal-content {
-        background-color: #242424;
-        color: #e0e0e0;
-        border: 1px solid rgba(255, 255, 255, 0.1);
-      }
-      .modal-header {
-        border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-      }
-      .modal-footer {
-        border-top: 1px solid rgba(255, 255, 255, 0.1);
-      }
-      .form-control {
-        background-color: #333;
-        color: #f0f0f0;
-        border: 1px solid #555;
-      }
-      .form-control:focus {
-        background-color: #333;
-        color: #f0f0f0;
-        border-color: #0d6efd;
-        box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
-      }
-      .btn-outline-info {
-        color: #0d6efd;
-        border-color: #0d6efd;
-      }
-      .btn-outline-info:hover {
-        background-color: #0d6efd;
-        color: #fff;
-      }
-
-      /* Particle Network Background */
-      #p5-canvas {
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: -1;
-      }
-    </style>
+    <link rel="stylesheet" href="/Frontend/css/Admin/users.css" />
   </head>
 
   <body>
-    <canvas id="p5-canvas"></canvas>
-
-    <nav class="navbar navbar-expand-lg navbar-light mb-4">
+    <nav class="navbar navbar-expand-lg mb-4">
       <div class="container-fluid">
-        <a
-          class="navbar-brand fw-bold text-primary"
-          href="./admin-dashboard.html"
-        >
+        <a class="navbar-brand fw-bold" href="./admin-dashboard.html">
           <i class="fas fa-arrow-left me-2"></i>Back to Dashboard
         </a>
-        <h2 class="h5 mb-0">Manage Users & Publishers</h2>
-        <button id="logoutBtn" class="btn btn-outline-danger">
+        <h2 class="h5 mb-0 fw-bold">Manage Users & Publishers</h2>
+        <!-- <button id="logoutBtn" class="btn btn-outline-danger">
           <i class="fas fa-sign-out-alt me-2"></i>Logout
-        </button>
+        </button> -->
       </div>
     </nav>
 
     <div class="container">
       <h3 class="mt-4 mb-3">All Users</h3>
-      <div class="table-responsive table-container p-4 mb-5">
+      <div class="table-responsive table-container mb-5">
         <table class="table table-hover align-middle">
           <thead>
             <tr>
@@ -129,7 +50,7 @@
       </div>
 
       <h3 class="mt-4 mb-3">All Publishers</h3>
-      <div class="table-responsive table-container p-4">
+      <div class="table-responsive table-container">
         <table class="table table-hover align-middle">
           <thead>
             <tr>
@@ -161,7 +82,7 @@
             <h5 class="modal-title" id="removeUserModalLabel">Remove User</h5>
             <button
               type="button"
-              class="btn-close btn-close-white"
+              class="btn-close"
               data-bs-dismiss="modal"
               aria-label="Close"
             ></button>
@@ -202,87 +123,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"></script>
     <script src="/Frontend/JavaScript/Admin/users.js"></script>
-
-    <script>
-      let particles = [];
-      const numParticles = 100;
-      const connectionDistance = 150;
-
-      function setup() {
-        let canvas = createCanvas(windowWidth, windowHeight);
-        canvas.id("p5-canvas");
-        canvas.style("display", "block");
-        canvas.style("position", "fixed");
-        canvas.style("top", "0");
-        canvas.style("left", "0");
-        canvas.style("z-index", "-1");
-
-        for (let i = 0; i < numParticles; i++) {
-          particles.push(new Particle());
-        }
-      }
-
-      function draw() {
-        background("#1a1a1a");
-        for (let i = 0; i < particles.length; i++) {
-          particles[i].update();
-          particles[i].show();
-          for (let j = i + 1; j < particles.length; j++) {
-            let d = dist(
-              particles[i].x,
-              particles[i].y,
-              particles[j].x,
-              particles[j].y
-            );
-            if (d < connectionDistance) {
-              let alpha = map(d, 0, connectionDistance, 40, 0);
-              stroke(255, 255, 255, alpha);
-              strokeWeight(0.5);
-              line(
-                particles[i].x,
-                particles[i].y,
-                particles[j].x,
-                particles[j].y
-              );
-            }
-          }
-        }
-      }
-
-      class Particle {
-        constructor() {
-          this.x = random(width);
-          this.y = random(height);
-          this.vx = random(-0.5, 0.5);
-          this.vy = random(-0.5, 0.5);
-          this.r = random(1, 3);
-          this.color = 255;
-        }
-
-        update() {
-          this.x += this.vx;
-          this.y += this.vy;
-
-          if (this.x < 0 || this.x > width) {
-            this.vx *= -1;
-          }
-          if (this.y < 0 || this.y > height) {
-            this.vy *= -1;
-          }
-        }
-
-        show() {
-          noStroke();
-          fill(this.color);
-          ellipse(this.x, this.y, this.r * 2);
-        }
-      }
-
-      function windowResized() {
-        resizeCanvas(windowWidth, windowHeight);
-      }
-    </script>
   </body>
 </html>
