--- a/Frontend/pages/Admin/admin-profile.html
+++ b/Frontend/pages/Admin/admin-profile.html
@@ -13,87 +13,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
-    <style>
-      body {
-        background-color: #1a1a1a; /* Dark background */
-        color: #e0e0e0; /* Light text color */
-        font-family: Arial, sans-serif;
-        overflow-x: hidden;
-        position: relative;
-      }
-      .navbar {
-        background-color: #1c1c1c; /* Dark navbar background */
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
-      }
-      .navbar-brand {
-        color: #f0f0f0 !important;
-      }
-      .h5,
-      h4 {
-        color: #f0f0f0;
-      }
-      .form-container {
-        background-color: rgba(36, 36, 36, 0.8);
-        backdrop-filter: blur(5px);
-        border-radius: 10px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        border: 1px solid rgba(255, 255, 255, 0.1);
-      }
-      .form-control {
-        background-color: #333;
-        color: #f0f0f0;
-        border: 1px solid #555;
-      }
-      .form-control:focus {
-        background-color: #333;
-        color: #f0f0f0;
-        border-color: #0d6efd;
-        box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
-      }
-      .form-label {
-        color: #b0b0b0;
-      }
-      .btn-primary {
-        background-color: #0d6efd;
-        border-color: #0d6efd;
-      }
-      .btn-primary:hover {
-        background-color: #0b5ed7;
-        border-color: #0a58ca;
-      }
-      .btn-success {
-        background-color: #198754;
-        border-color: #198754;
-      }
-      .btn-success:hover {
-        background-color: #157347;
-        border-color: #146c43;
-      }
-      .btn-outline-danger {
-        color: #dc3545;
-        border-color: #dc3545;
-      }
-      .btn-outline-danger:hover {
-        background-color: #dc3545;
-        color: #fff;
-      }
-      hr {
-        border-color: rgba(255, 255, 255, 0.1);
-      }
-
-      /* Particle Network Background */
-      #p5-canvas {
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: -1;
-      }
-    </style>
+    <link rel="stylesheet" href="/Frontend/css/Admin/admin-profile.css" />
   </head>
   <body>
-    <canvas id="p5-canvas"></canvas>
-
-    <nav class="navbar navbar-expand-lg navbar-light mb-4">
+    <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
         <a
           class="navbar-brand fw-bold text-primary"
@@ -101,30 +24,42 @@
         >
           <i class="fas fa-arrow-left me-2"></i>Back to Dashboard
         </a>
-        <h2 class="h5 mb-0">Admin Management</h2>
-        <button id="logoutBtn" class="btn btn-outline-danger">
-          <i class="fas fa-sign-out-alt me-2"></i>Logout
-        </button>
+        <h2 class="h5 mb-0 fw-bold">Admin Management</h2>
       </div>
     </nav>
-    <div class="container mt-5">
+
+    <div class="container">
       <div class="row">
-        <div class="col-md-6 offset-md-3 form-container p-4">
+        <div class="col-md-10 offset-md-1 form-container">
+          <!-- Profile Update -->
           <h4 class="mb-4">Update My Profile</h4>
           <form id="updateAdminProfileForm">
             <div class="mb-3">
               <label for="adminUsername" class="form-label">Username</label>
-              <input type="text" class="form-control" id="adminUsername" />
+              <input
+                type="text"
+                class="form-control"
+                id="adminUsername"
+                value="admin"
+              />
             </div>
             <div class="mb-3">
               <label for="adminEmail" class="form-label">Email</label>
-              <input type="email" class="form-control" id="adminEmail" />
+              <input
+                type="email"
+                class="form-control"
+                id="adminEmail"
+                value="admin@gmail.com"
+              />
             </div>
             <button type="submit" class="btn btn-primary">
               <i class="fas fa-save me-2"></i>Update Profile
             </button>
           </form>
+
           <hr class="my-4" />
+
+          <!-- Add New Admin -->
           <h4 class="mb-4">Add New Admin</h4>
           <form id="addNewAdminForm">
             <div class="mb-3">
@@ -158,92 +93,37 @@
               <i class="fas fa-user-plus me-2"></i>Add Admin
             </button>
           </form>
+
+          <hr class="my-4" />
+
+          <!-- All Admins Table -->
+          <div class="card shadow-sm p-3 mb-5 bg-white rounded">
+            <div class="card-body">
+              <h4 class="mb-4">All Admins</h4>
+              <div class="table-responsive">
+                <table class="table table-hover" id="adminTable">
+                  <thead>
+                    <tr>
+                      <th scope="col">Admin ID</th>
+                      <th scope="col">Username</th>
+                      <th scope="col">Email</th>
+                      <th scope="col">Actions</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <!-- Data loads dynamically -->
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
+
+    <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"></script>
     <script src="/Frontend/JavaScript/Admin/admin-profile.js"></script>
-
-    <script>
-      let particles = [];
-      const numParticles = 100;
-      const connectionDistance = 150;
-
-      function setup() {
-        let canvas = createCanvas(windowWidth, windowHeight);
-        canvas.id("p5-canvas");
-        canvas.style("display", "block");
-        canvas.style("position", "fixed");
-        canvas.style("top", "0");
-        canvas.style("left", "0");
-        canvas.style("z-index", "-1");
-
-        for (let i = 0; i < numParticles; i++) {
-          particles.push(new Particle());
-        }
-      }
-
-      function draw() {
-        background("#1a1a1a");
-        for (let i = 0; i < particles.length; i++) {
-          particles[i].update();
-          particles[i].show();
-          for (let j = i + 1; j < particles.length; j++) {
-            let d = dist(
-              particles[i].x,
-              particles[i].y,
-              particles[j].x,
-              particles[j].y
-            );
-            if (d < connectionDistance) {
-              let alpha = map(d, 0, connectionDistance, 40, 0);
-              stroke(255, 255, 255, alpha);
-              strokeWeight(0.5);
-              line(
-                particles[i].x,
-                particles[i].y,
-                particles[j].x,
-                particles[j].y
-              );
-            }
-          }
-        }
-      }
-
-      class Particle {
-        constructor() {
-          this.x = random(width);
-          this.y = random(height);
-          this.vx = random(-0.5, 0.5);
-          this.vy = random(-0.5, 0.5);
-          this.r = random(1, 3);
-          this.color = 255;
-        }
-
-        update() {
-          this.x += this.vx;
-          this.y += this.vy;
-
-          if (this.x < 0 || this.x > width) {
-            this.vx *= -1;
-          }
-          if (this.y < 0 || this.y > height) {
-            this.vy *= -1;
-          }
-        }
-
-        show() {
-          noStroke();
-          fill(this.color);
-          ellipse(this.x, this.y, this.r * 2);
-        }
-      }
-
-      function windowResized() {
-        resizeCanvas(windowWidth, windowHeight);
-      }
-    </script>
   </body>
 </html>
