--- a/Frontend/pages/Publisher/AI-generated-article.html
+++ b/Frontend/pages/Publisher/AI-generated-article.html
@@ -8,56 +8,10 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <style>
-      body {
-        padding: 20px;
-        background: #f8f9fa;
-      }
-      .card {
-        max-width: 800px;
-        margin: 0 auto;
-      }
-      /* Article content styling */
-      .article-preview {
-        background: #fff;
-        border: 1px solid #dee2e6;
-        border-radius: 0.375rem;
-        padding: 1.5rem;
-        margin-top: 1rem;
-      }
-      .article-preview h1 {
-        color: #212529;
-        font-size: 2rem;
-        margin-bottom: 1rem;
-        border-bottom: 2px solid #007bff;
-        padding-bottom: 0.5rem;
-      }
-      .article-preview h2 {
-        color: #495057;
-        font-size: 1.5rem;
-        margin-top: 2rem;
-        margin-bottom: 1rem;
-      }
-      .article-preview h3 {
-        color: #6c757d;
-        font-size: 1.25rem;
-        margin-top: 1.5rem;
-        margin-bottom: 0.75rem;
-      }
-      .article-preview p {
-        line-height: 1.6;
-        margin-bottom: 1rem;
-        color: #212529;
-      }
-      .article-preview strong {
-        font-weight: 600;
-        color: #495057;
-      }
-      .article-preview em {
-        font-style: italic;
-        color: #6c757d;
-      }
-    </style>
+    <link
+      rel="stylesheet"
+      href="/Frontend/css/Publisher/AI-generated-aricle.css"
+    />
   </head>
   <body>
     <div class="card shadow p-4">
@@ -92,9 +46,7 @@
           </div>
           <div class="card-body">
             <div class="mb-3">
-              <label
-                for="articleImage"
-                class="form-label"
+              <label for="articleImage" class="form-label"
                 >Choose an image for your article</label
               >
               <input
@@ -103,9 +55,9 @@
                 id="articleImage"
                 accept="image/*"
               />
-              <div class="form-text"
-                >Supported formats: JPG, PNG, GIF. Max size: 5MB</div
-              >
+              <div class="form-text">
+                Supported formats: JPG, PNG, GIF. Max size: 5MB
+              </div>
             </div>
 
             <!-- Image Preview -->
@@ -140,120 +92,6 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script>
-      const token = localStorage.getItem("token"); // Logged-in JWT
-      console.log("JWT Token:", token);
-
-      // Generate article button click
-      $("#generateBtn").on("click", function () {
-        const title = $("#titleInput").val()?.trim();
-
-        if (!title) return alert("Title is required!");
-
-        if (!token) return alert("You must be logged in!");
-
-        $("#loading").removeClass("d-none");
-
-        $.ajax({
-          url: "http://localhost:8080/api/articles/generate",
-          method: "POST",
-          headers: {
-            Authorization: "Bearer " + token,
-          },
-          data: { title: title },
-          success: function (res) {
-            $("#loading").addClass("d-none");
-            $("#genTitle").text(res.data.title);
-            // Use .html() instead of .text() to preserve formatting
-            $("#genContent").html(res.data.content);
-            $("#generatedArticle").removeClass("d-none");
-          },
-          error: function (xhr) {
-            $("#loading").addClass("d-none");
-            $("#statusMsg").html(
-              "<div class='alert alert-danger'>Failed to generate article.</div>"
-            );
-            console.error(xhr);
-          },
-        });
-      });
-
-      // Image upload and preview
-      $("#articleImage").on("change", function () {
-        const file = this.files[0];
-
-        if (file) {
-          const reader = new FileReader();
-          reader.onload = function (e) {
-            $("#previewImg").attr("src", e.target.result);
-            $("#imagePreview").removeClass("d-none");
-          };
-          reader.readAsDataURL(file);
-        } else {
-          $("#imagePreview").addClass("d-none");
-        }
-      });
-
-      // Remove image button click
-      $("#removeImage").on("click", function () {
-        $("#articleImage").val("");
-        $("#previewImg").attr("src", "");
-        $("#imagePreview").addClass("d-none");
-      });
-
-      // Publish button click
-      $("#publishBtn").on("click", function () {
-        const title = $("#genTitle").text();
-        // Get HTML content instead of plain text
-        const content = $("#genContent").html();
-        const imageFile = $("#articleImage")[0].files[0];
-
-        // Create FormData object for multipart/form-data
-        const formData = new FormData();
-        formData.append("title", title);
-        formData.append("content", content);
-
-        // Append image file if selected
-        if (imageFile) {
-          formData.append("image", imageFile);
-        }
-
-        // Disable the publish button to prevent double submission
-        $("#publishBtn").prop("disabled", true).text("Publishing...");
-
-        $.ajax({
-          url: "http://localhost:8080/api/articles",
-          method: "POST",
-          headers: {
-            Authorization: "Bearer " + token,
-          },
-          data: formData,
-          processData: false, // Important: Don't process the data
-          contentType: false, // Important: Don't set content type, let browser set it
-          success: function (res) {
-            $("#statusMsg").html(
-              "<div class='alert alert-success'>Article published successfully!</div>"
-            );
-
-            // Show popup message and navigate to dashboard
-            alert("Published");
-
-            // Navigate to publisher dashboard after a short delay
-            setTimeout(function() {
-              window.location.href = "/Frontend/pages/Publisher/publisher-dashboard.html";
-            }, 500);
-          },
-          error: function (xhr) {
-            $("#statusMsg").html(
-              "<div class='alert alert-danger'>Failed to publish article.</div>"
-            );
-            console.error(xhr);
-
-            // Re-enable the publish button on error
-            $("#publishBtn").prop("disabled", false).text("Publish Article");
-          },
-        });
-      });
-    </script>
+    <script src="/Frontend/JavaScript/Publisher/AI-generated-aricle.js"></script>
   </body>
 </html>
