--- a/Frontend/pages/Publisher/buy-subscription.html
+++ b/Frontend/pages/Publisher/buy-subscription.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BlogHub - AI Generator Subscription</title>
-    <link rel="icon" href="/Frontend/assets/image/blogging.png" />
+    <link rel="icon" href="../../assets/image/blogging.png" />
 
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <!-- Payment Modal CSS -->
+    <!-- <link
+      rel="stylesheet"
+      href="../../css/Publisher/buy-subscription-payment.css"
+    /> -->
     <!-- Inter Font -->
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
@@ -251,7 +256,7 @@
       <div class="subscription-card">
         <div>
           <h3 class="plan-title">Premium Plan</h3>
-          <p class="plan-price">LKR 4999<small>/month</small></p>
+          <p class="plan-price">LKR 4999<small>/lifetime</small></p>
           <ul class="plan-features">
             <li>Unlimited AI Articles</li>
             <li>Full Feature Access</li>
@@ -261,16 +266,10 @@
             <li>API Access</li>
           </ul>
         </div>
-        <button
-          type="button"
-          class="btn-subscribe"
-          onclick="initiatePayHere('premium')"
+        <a href="../Publisher/payment.html" class="btn-free-access"
+          >Buy Subscription Now</a
         >
-          Subscribe Now
-        </button>
-        <a
-          href="/Frontend/pages/Publisher/AI-generated-article.html"
-          class="btn-free-access"
+        <a href="../Publisher/AI-generated-article.html" class="btn-free-access"
           >Access Free Version</a
         >
       </div>
@@ -285,5 +284,8 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Three.js for 3D background -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+
   </body>
 </html>
