feat: update article category options in publisher dashboard; expand categories for better content classification

--- a/Frontend/pages/Publisher/publisher-dashboard.html
+++ b/Frontend/pages/Publisher/publisher-dashboard.html
@@ -224,10 +224,14 @@
                   >
                   <select class="form-select" id="articleCategory">
                     <option value="" selected>Select a category</option>
-                    <option value="technology">Technology</option>
-                    <option value="web-dev">Web Development</option>
-                    <option value="ai">Artificial Intelligence</option>
-                    <option value="programming">Programming</option>
+                    <option value="technology-gadgets">Technology & Gadgets</option>
+                    <option value="health-wellness">Health & Wellness</option>
+                    <option value="finance-money">Finance & Money</option>
+                    <option value="education-learning">Education & Learning</option>
+                    <option value="travel-adventure">Travel & Adventure</option>
+                    <option value="lifestyle-personal-development">Lifestyle & Personal Development</option>
+                    <option value="entertainment-media">Entertainment & Media</option>
+                    <option value="business-marketing">Business & Marketing</option>
                   </select>
                 </div>
                 <div class="col-md-6 mb-3">
@@ -343,10 +347,14 @@
                   >
                   <select class="form-select" id="editArticleCategory">
                     <option value="" selected>Select a category</option>
-                    <option value="technology">Technology</option>
-                    <option value="web-dev">Web Development</option>
-                    <option value="ai">Artificial Intelligence</option>
-                    <option value="programming">Programming</option>
+                    <option value="technology-gadgets">Technology & Gadgets</option>
+                    <option value="health-wellness">Health & Wellness</option>
+                    <option value="finance-money">Finance & Money</option>
+                    <option value="education-learning">Education & Learning</option>
+                    <option value="travel-adventure">Travel & Adventure</option>
+                    <option value="lifestyle-personal-development">Lifestyle & Personal Development</option>
+                    <option value="entertainment-media">Entertainment & Media</option>
+                    <option value="business-marketing">Business & Marketing</option>
                   </select>
                 </div>
                 <div class="col-md-6 mb-3">
